Thu Apr 04 06:17:32 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,perl/Makefile.am: Probe for 'prove' in configure.

Thu Apr 04 06:05:54 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,java/Makefile.am,lua/Makefile.am,
	  perl/Makefile.am,php/Makefile.am,python/Makefile.am,
	  python/run-python-test,ruby/Makefile.am,tcl8/Makefile.am: Fix the
	  tests to work with the new automake parallel test driver.

Thu Mar 28 04:27:46 GMT 2013  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am: Update for new
	  ExpandDeciderFilterPrefix class.

Tue Mar 19 06:07:04 GMT 2013  Olly Betts <olly@survex.com>

	* python/Makefile.am: Fix dependency generation to take into account
	  the stamp file.

Mon Mar 18 10:59:39 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.14 and ChangeLog.

Mon Mar 18 04:11:01 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Fix deprecation warning from Ruby 1.9.3.

Thu Mar 14 09:56:27 GMT 2013  Olly Betts <olly@survex.com>

	* python/extra.i: Fix typo in doccomment.

Thu Mar 14 09:16:45 GMT 2013  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,generic/generic.mk,java/Makefile.am,
	  perl/Makefile.am,php/Makefile.am,python/Makefile.am,ruby/Makefile.am,
	  swig-depcomp: Fix handling of stamp file by swig-depcomp script.

Sat Feb 16 02:08:29 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Allow TCL_INC to be passed to configure.  (fixes #612)

Wed Jan 23 00:07:52 GMT 2013  Olly Betts <olly@survex.com>

	* perl/t/10query.t: Perl 5.16.1 adds a '.' after "at foo line 123" so
	  adjust regexp in testcase to allow an optional '.' there.
	  (ticket#610)

Wed Jan 16 10:00:00 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Start to update in preparation for 1.3.1 release.

Wed Jan 16 02:32:38 GMT 2013  Olly Betts <olly@survex.com>

	* ruby/smoketest.rb: Extend testcase to check returned MSet size.

Wed Jan 16 01:41:33 GMT 2013  Olly Betts <olly@survex.com>
